<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="subnet"
        android:summary="@string/summary_subnet"
        android:title="@string/setting_subnet"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="subnet"
        android:key="tethering"
        android:summary="@string/summary_tethering"
        android:title="@string/setting_tethering"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="subnet"
        android:key="lan"
        android:summary="@string/summary_lan"
        android:title="@string/setting_lan"
        app:iconSpaceReserved="false" />

    <MultiSelectListPreference
        android:defaultValue="@array/default_wifi_home"
        android:key="wifi_homes"
        android:summary="@string/summary_wifi_home"
        android:title="@string/setting_wifi_home"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="use_metered"
        android:summary="@string/summary_metered"
        android:title="@string/setting_metered"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="unmetered_2g"
        android:summary="@string/summary_metered_2g"
        android:title="@string/setting_metered_2g"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="unmetered_3g"
        android:summary="@string/summary_metered_3g"
        android:title="@string/setting_metered_3g"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="unmetered_4g"
        android:summary="@string/summary_metered_4g"
        android:title="@string/setting_metered_4g"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="national_roaming"
        android:summary="@string/summary_national_roaming"
        android:title="@string/setting_national_roaming"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="eu_roaming"
        android:summary="@string/summary_eu_roaming"
        android:title="@string/setting_eu_roaming"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="disable_on_call"
        android:summary="@string/summary_call"
        android:title="@string/setting_call"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="lockdown_wifi"
        android:title="@string/setting_lockdown_wifi"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="lockdown_other"
        android:title="@string/setting_lockdown_other"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="reload_onconnectivity"
        android:title="@string/setting_reload_onconnectivity"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
