<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="export"
        android:title="@string/setting_export" />

    <Preference
        android:key="import"
        android:title="@string/setting_import" />

    <Preference
        android:key="hosts_import"
        android:title="@string/setting_hosts" />

    <Preference
        android:key="hosts_import_append"
        android:title="@string/setting_hosts_append" />

    <EditTextPreference
        android:defaultValue="https://www.netguard.me/hosts"
        android:hint="https://www.netguard.me/hosts"
        android:key="hosts_url"
        android:title="@string/setting_hosts_url" />

    <Preference
        android:dependency="hosts_url"
        android:key="hosts_download"
        android:title="@string/setting_hosts_download" />

</PreferenceScreen>
