<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="whitelist_wifi"
        android:title="@string/setting_whitelist_wifi" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="whitelist_other"
        android:title="@string/setting_whitelist_other" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="screen_on"
        android:title="@string/setting_screen_on" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="screen_on"
        android:key="screen_wifi"
        android:title="@string/setting_screen_wifi" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="screen_on"
        android:key="screen_other"
        android:title="@string/setting_screen_other" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="whitelist_roaming"
        android:title="@string/setting_whitelist_roaming" />

</PreferenceScreen>
