<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="6"
        android:entries="@array/logLevelNames"
        android:entryValues="@array/logLevelValues"
        android:key="loglevel"
        android:summary="@string/summary_loglevel"
        android:title="@string/setting_loglevel"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ip6"
        android:summary="@string/summary_ip6"
        android:title="@string/setting_ip6"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="debug_iab"
        android:title="Debug IAB"
        app:iconSpaceReserved="false" />

</PreferenceScreen>
